src/tests/PropInInitialState/invalid/case#5/index.jsx
import {useState} from 'react'

function SetContainer(props){
    const [sets, setSets] = useState(props.sets);

    return <View>...</View>
}